--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
 <h1>{{title}}</h1>
+
+<hr />
+<hr />
+
+<app-department-container [departmentName]="departmentName"></app-department-container>
+
+<hr />
+
+<app-student-container></app-student-container>
