--- a/src/app/department-container/department-container.component.html
+++ b/src/app/department-container/department-container.component.html
@@ -1,3 +1,4 @@
 <p>Department Name Is : {{departmentName}}</p>
+<button type="button" (click)="updateDepartmentName()">Update</button>
 
 <app-department></app-department>
