--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <hr />
 <hr />
 
-<app-department-container [departmentName]="departmentName" (updateDeptName)="updateDeptName()"></app-department-container>
+<app-department-container [departmentName]="departmentName" (updateDeptName)="updateDeptName($event)"></app-department-container>
 
 <hr />
 
