--- a/src/app/department-container/department-container.component.html
+++ b/src/app/department-container/department-container.component.html
@@ -1,6 +1,4 @@
-<h3>
-    <p>Department Name Is : {{departmentName}} <button type="button" (click)="updateDepartmentName($event)" [hidden]="hide">Update</button></p>
-</h3>
+Department Name Is : <h1>{{deptName}} </h1>
 
 <div>
     <!-- <input placeholder="Enter name here" type="text" name="name" (change)="nameChangeHandler($event.target.value)" /> -->
