--- a/src/app/student-container/student-container.component.html
+++ b/src/app/student-container/student-container.component.html
@@ -1,6 +1,14 @@
 <!-- {{students|json}} -->
 
+<h3><span style="margin: 0px 20px">ID</span><span style="margin: 0px 20px">Name</span><span style="margin: 0px 20px">Course</span><span
+        style="margin: 0px 20px">Fees</span></h3>
 
-<p *ngFor="let value of arr">
-    {{value}}
-</p>
+<!-- <p *ngFor="let student of students">
+    <span style="margin: 0px 20px">{{student._id}}</span><span style="margin: 0px 20px">{{student.name}}</span><span
+        style="margin: 0px 20px">{{student.course}}</span><span style="margin: 0px 20px">{{student.fees}}</span>
+</p> -->
+
+<app-student *ngFor="let student of students" [_id]="student._id" [name]="student.name" [course]="student.course"
+    [fees]="student.fees"></app-student>
+                       
+                   
