4.LifeCycle - upto docheck

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,6 @@
 
 <hr />
 
-<app-student-container [students]="students"></app-student-container>
+<app-student-container [students]="students" [count]="count">
+
+</app-student-container>
