--- a/src/app/department-container/department-container.component.html
+++ b/src/app/department-container/department-container.component.html
@@ -1,4 +1,4 @@
-Department Name Is : <h3>{{deptName}} </h3>
+<h3><span style="color: #000000">Department Name Is : </span>{{deptName}}</h3>
 
 
 <div *ngIf="showErrorMessage" class="error-message">
