--- a/src/app/student-container/student-container.component.html
+++ b/src/app/student-container/student-container.component.html
@@ -1,5 +1,7 @@
 <!-- {{students|json}} -->
 
+<h2>Total Students: {{count}}</h2>
+
 <h3><span style="margin: 0px 20px">ID</span><span style="margin: 0px 20px">Name</span><span style="margin: 0px 20px">Course</span><span
         style="margin: 0px 20px">Fees</span></h3>
 
