--- a/src/app/student-container/student/student.component.html
+++ b/src/app/student-container/student/student.component.html
@@ -1,4 +1,4 @@
-<p><span [ngStyle]="{'color': 'blue', 'font-size': '24px', 'font-weight': 'bold'}">{{_id}}</span>
+<p><span style="margin: 0px 20px">{{_id}}</span>
     <span style="margin: 0px 20px">{{name}}</span>
     <span style="margin: 0px 20px">{{course}}</span>
     <span [ngClass]="getClass()" style="margin: 0px 20px">{{fees}}</span></p>
