--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>{{title}}</h1>
+<h1 changeBgColor>{{title}}</h1>
 
 <hr />
 <hr />
@@ -8,5 +8,5 @@
 <hr />
 
 <app-student-container [students]="students" [count]="count">
-
+    <h3 #heading>Student Container</h3>
 </app-student-container>
