--- a/src/app/department-container/department-container.component.html
+++ b/src/app/department-container/department-container.component.html
@@ -1,5 +1,6 @@
 <h3><span style="color: #000000">Department Name Is : </span>{{deptName}}</h3>
 
+<ng-content></ng-content>
 
 <div *ngIf="showErrorMessage" class="error-message">
     <p>Can't add empty student details</p>
