Ng-Template-Container

--- a/src/app/student-container/student-container.component.html
+++ b/src/app/student-container/student-container.component.html
@@ -1,6 +1,6 @@
 <!-- {{students|json}} -->
 
-<!-- <h3 #count>Total Students: {{count}}</h3> -->
+<h3 #count>Total Students: {{count}}</h3>
 
 
 <!-- <ng-content select="h2"></ng-content> -->
