--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
     </app-student-container> -->
 
     <app-student-container [students]="students" [count]="count" [companyLogo]="companyLogo">
+        <h1 #heading>Heading Ref</h1>
     </app-student-container>
 </div>
 
