--- a/src/styles.css
+++ b/src/styles.css
@@ -63,3 +63,9 @@ h1 {
   * {
     font-family: Arial, Helvetica, sans-serif;
   }
+
+
+  .green {
+    background-color: green;
+    color: white;
+  }
