--- a/src/app/student-container/student-container.component.html
+++ b/src/app/student-container/student-container.component.html
@@ -26,7 +26,7 @@
 </app-student>
                        
  
-
+<!-- 
 <ng-template #defaultLogo>
     <h2>Default Logo</h2>
-</ng-template>
+</ng-template> -->
