--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,7 @@
         <a routerLink='/home'>Home</a>
         <a routerLink='/department'>Department</a>
         <a routerLink='/student-list'>StudentsList</a>
+        <a class="nav-item nav-link" (click)="logout()">Logout</a>
     </nav>
 
     <br />
